# CURATOR

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  future-optimizations.html  install.sh  package-lock.json  provider-profile-layer.html  pyproject.toml  runtime-workspace-ui.html
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  (+2 more)
docs/: future-optimizations.html  orca-parallel-orchestration-and-task-memory.html  orchestration.html  provider-profile-layer.html  release-notes-v0.1.0.html  runtime-workspace-ui.html  shell-adapter-boundary.html  v0-alpha-implementation-status.html  v0-alpha-release-plan-v3.html
tests/: fakes.py  test_app.py  test_banner_preflight.py  test_cancellation.py  test_cli.py  test_core_model_boundaries.py  test_curator_path_aliases.py  test_curator_paths.py  test_db.py  test_diagnostics.py  test_goals.py  test_harness_runtime.py  test_init_wizard.py  test_lockfile.py  test_loop_compiler.py  test_loop_templates.py  test_memory.py  test_no_mock_or_seed.py  test_nodes.py  test_phase_status.py  test_provider_adapters.py  test_provider_driver.py  test_provider_profiles.py  test_provider_stream_limit.py  test_provider_usage_limit.py  test_recovery.py  test_redact_stream.py  test_reflow_log.py  test_resume.py  test_role_registry.py  test_role_selection.py  test_roles.py  test_runtime_readiness.py  test_runtime_workbench.py  test_scheduler.py  test_scheduler_boundaries.py  test_scheduler_decision.py  test_setup_wizard.py  test_shell_app.py  test_shell_intent.py  (+13 more)
(+207 files in other folders)
