# Project configuration for the Curator Phase 0 Python package.
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "curator"
version = "0.1.0"
description = "Local-first coding-agent workbench with real provider orchestration."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "JasonZQH" },
]
keywords = [
  "agents",
  "cli",
  "codex",
  "local-first",
  "orchestration",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Build Tools",
  "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
  "typer>=0.12",
  "textual>=8.2,<9",
  "rich>=13.7",
  "pydantic>=2.8",
  "PyYAML>=6.0",
]

[project.urls]
Homepage = "https://github.com/JasonZQH/CURATOR"
Repository = "https://github.com/JasonZQH/CURATOR"
Issues = "https://github.com/JasonZQH/CURATOR/issues"

[project.scripts]
curator = "curator.cli:app"

[dependency-groups]
dev = [
  "pytest>=8.2",
  "ruff>=0.5",
]

[tool.hatch.build.targets.wheel]
packages = ["src/curator"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
